# ModCD

./: .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  README.md  table.md
resources/localization/: en.json
src/: .clang-format  format.sh  main.cpp
src/app/: config.cpp  config.hpp  mcds.cpp  mcds.hpp  modCD.cpp  modCD.hpp  repositoryProvider.hpp  repositoryProviderOffline.cpp  repositoryProviderOffline.hpp  repositoryProviderOnline.cpp  repositoryProviderOnline.hpp  updater.cpp  updater.hpp
src/core/: game.cpp  game.hpp  mergedInfo.cpp  mergedInfo.hpp  mod.cpp  mod.hpp  modInfo.cpp  modInfo.hpp  repository.cpp  repository.hpp  stub.cpp  stub.hpp
src/front/: app.cpp  app.hpp  asyncLock.cpp  asyncLock.hpp
src/front/activity/: bigPictureActivity.cpp  bigPictureActivity.hpp  gamesListActivity.cpp  gamesListActivity.hpp  modActivity.cpp  modActivity.hpp  modsListActivity.cpp  modsListActivity.hpp  screenshotsActivity.cpp  screenshotsActivity.hpp  stubActivity.cpp  stubActivity.hpp
src/front/interfaces/: iUpdatable.hpp
src/front/styles/: buttons.hpp  colors.cpp  colors.hpp
src/front/view/: baView.cpp  baView.hpp  gameTileView.cpp  gameTileView.hpp  gamesListView.cpp  gamesListView.hpp  lineEdit.cpp  lineEdit.hpp  loadingView.cpp  loadingView.hpp  modTileView.cpp  modTileView.hpp  modView.cpp  modView.hpp  modsListView.cpp  modsListView.hpp  screenshotsView.cpp  screenshotsView.hpp  toastView.cpp  toastView.hpp
src/utils/: constants.hpp  flagsManager.cpp  flagsManager.hpp  fmtFilesystem.hpp  http.cpp  http.hpp  localization.cpp  localization.hpp  utils.cpp  utils.hpp
